--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link id="white_styles" rel="stylesheet" href="css/styles.css" >
     <link id="black_styles" rel="stylesheet" href="css/black_styles.css" disabled>
     <meta charset="utf-8">
-    <title></title>
+    <title>2024🌷</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700;800&display=swap" rel="stylesheet">
